не предлагать создание альтернативой к закрытию задачи